--- a/grails-app/i18n/crm-properties.properties
+++ b/grails-app/i18n/crm-properties.properties
@@ -1,2 +1,9 @@
-crmProperty.list.title=User defined properties
+crmProperty.index.label=User defined properties
+crmProperty.index.title=User defined properties
 
+crmProperty.button.create.label=Create field
+crmProperty.create.string.label=Text
+crmProperty.create.number.label=Numeric
+crmProperty.create.date.label=Date
+crmProperty.create.checkbox.label=Checkbox
+crmProperty.create.radio.label=Radio buttons
