--- a/grails-app/i18n/crm-properties_sv.properties
+++ b/grails-app/i18n/crm-properties_sv.properties
@@ -1,2 +1,20 @@
-crmProperty.list.title=Anpassade fält
+crmProperty.index.label=Anpassade fält
+crmProperty.index.title=Anpassade fält
+crmProperty.index.help=Administrera anpassade fält i olika moduler
+
+crmProperty.create.title=Lägg till anpassat fält
+crmProperty.button.create.label=Lägg till fält
+crmProperty.create.string.label=Textfält
+crmProperty.create.number.label=Numeriskt fält
+crmProperty.create.date.label=Datumfält
+crmProperty.create.checkbox.label=Flerval (kryssruta)
+crmProperty.create.radio.label=Enval (radioknappar)
+
+crmPropertyConfig.orderIndex.label=Ordning
+crmPropertyConfig.param.label=Parameternamn
+crmPropertyConfig.name.label=Fältnamn
+crmPropertyConfig.description.label=Hjälptext
+crmPropertyConfig.text.minLength.label=Min längd
+crmPropertyConfig.text.maxLength.label=Max längd
+
 
