Editing property values works now

--- a/grails-app/i18n/crm-properties_sv.properties
+++ b/grails-app/i18n/crm-properties_sv.properties
@@ -10,11 +10,11 @@ crmProperty.create.date.label=Datumfält
 crmProperty.create.checkbox.label=Flerval (kryssruta)
 crmProperty.create.radio.label=Enval (radioknappar)
 
+crmProperty.edit.title=Redigera anpassat fält
+
 crmPropertyConfig.orderIndex.label=Ordning
 crmPropertyConfig.param.label=Parameternamn
 crmPropertyConfig.name.label=Fältnamn
 crmPropertyConfig.description.label=Hjälptext
 crmPropertyConfig.text.minLength.label=Min längd
 crmPropertyConfig.text.maxLength.label=Max längd
-
-
