Improved data binding

--- a/grails-app/i18n/crm-properties.properties
+++ b/grails-app/i18n/crm-properties.properties
@@ -1,9 +1,18 @@
 crmProperty.index.label=User defined properties
 crmProperty.index.title=User defined properties
-
+crmProperty.index.help=Manage custom properties
+crmProperty.create.title=Add custom property
 crmProperty.button.create.label=Create field
 crmProperty.create.string.label=Text
 crmProperty.create.number.label=Numeric
 crmProperty.create.date.label=Date
 crmProperty.create.checkbox.label=Checkbox
 crmProperty.create.radio.label=Radio buttons
+crmProperty.edit.title=Edit custom property
+crmPropertyConfig.orderIndex.label=Order
+crmPropertyConfig.param.label=Paremeter
+crmPropertyConfig.name.label=Name
+crmPropertyConfig.description.label=Help text
+crmPropertyConfig.text.minLength.label=Minimum length
+crmPropertyConfig.text.maxLength.label=Maximum length
+default.invalid.property.message=Custom property [{0}] of class [{1}] with value [{2}] does not pass custom validation
