--- a/grails-app/i18n/crm-properties_sv.properties
+++ b/grails-app/i18n/crm-properties_sv.properties
@@ -18,3 +18,5 @@ crmPropertyConfig.name.label=Fältnamn
 crmPropertyConfig.description.label=Hjälptext
 crmPropertyConfig.text.minLength.label=Min längd
 crmPropertyConfig.text.maxLength.label=Max längd
+
+default.invalid.property.message=Det anpassade fältet [{0}] tillåter inte värdet [{2}]
