Implement show/hide disabled properties

--- a/grails-app/i18n/crm-properties_sv.properties
+++ b/grails-app/i18n/crm-properties_sv.properties
@@ -19,4 +19,6 @@ crmPropertyConfig.description.label=Hjälptext
 crmPropertyConfig.text.minLength.label=Min längd
 crmPropertyConfig.text.maxLength.label=Max längd
 
+crmProperty.show.disabled.label={0} st inaktiva fält
+
 default.invalid.property.message=Det anpassade fältet [{0}] tillåter inte värdet [{2}]
