--- a/grails-app/i18n/crm-properties.properties
+++ b/grails-app/i18n/crm-properties.properties
@@ -15,4 +15,7 @@ crmPropertyConfig.name.label=Name
 crmPropertyConfig.description.label=Help text
 crmPropertyConfig.text.minLength.label=Minimum length
 crmPropertyConfig.text.maxLength.label=Maximum length
+
+crmProperty.show.disabled.label={0} disabled fields
+
 default.invalid.property.message=Custom property [{0}] of class [{1}] with value [{2}] does not pass custom validation
