Fields can now be removed

--- a/grails-app/i18n/crm-properties.properties
+++ b/grails-app/i18n/crm-properties.properties
@@ -3,6 +3,7 @@ crmProperty.index.title=User defined properties
 crmProperty.index.help=Manage custom properties
 crmProperty.create.title=Add custom property
 crmProperty.button.create.label=Create field
+crmProperty.button.delete.confirm=Are you sure you want to delete this field?
 crmProperty.create.string.label=Text
 crmProperty.create.number.label=Numeric
 crmProperty.create.date.label=Date
