--- a/grails-app/i18n/crm-properties_sv.properties
+++ b/grails-app/i18n/crm-properties_sv.properties
@@ -4,6 +4,7 @@ crmProperty.index.help=Administrera anpassade fält i olika moduler
 
 crmProperty.create.title=Lägg till anpassat fält
 crmProperty.button.create.label=Lägg till fält
+crmProperty.button.delete.confirm=Är du säker på att du vill ta bort fältet?
 crmProperty.create.string.label=Textfält
 crmProperty.create.number.label=Numeriskt fält
 crmProperty.create.date.label=Datumfält
